--- a/src/Forest OS/Forest OS.vbproj
+++ b/src/Forest OS/Forest OS.vbproj
@@ -108,10 +108,16 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="OS\Login\LoginForm1.Designer.vb">
-      <DependentUpon>LoginForm1.vb</DependentUpon>
+    <Compile Include="OS\Login\Login.Designer.vb">
+      <DependentUpon>Login.vb</DependentUpon>
     </Compile>
-    <Compile Include="OS\Login\LoginForm1.vb">
+    <Compile Include="OS\Login\Login.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OS\Register\CreateAccount.Designer.vb">
+      <DependentUpon>CreateAccount.vb</DependentUpon>
+    </Compile>
+    <Compile Include="OS\Register\CreateAccount.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="OS\System\Background.Designer.vb">
@@ -131,8 +137,11 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="OS\Login\LoginForm1.resx">
-      <DependentUpon>LoginForm1.vb</DependentUpon>
+    <EmbeddedResource Include="OS\Login\Login.resx">
+      <DependentUpon>Login.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OS\Register\CreateAccount.resx">
+      <DependentUpon>CreateAccount.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OS\System\Background.resx">
       <DependentUpon>Background.vb</DependentUpon>
@@ -177,7 +186,6 @@
   <ItemGroup>
     <Folder Include="OS\Desktop\" />
     <Folder Include="OS\Programs\" />
-    <Folder Include="OS\Register\" />
     <Folder Include="OS\Settings\" />
     <Folder Include="OS\User\" />
   </ItemGroup>
