--- a/src/Forest-OS-Console/Forest-OS-Console.vbproj
+++ b/src/Forest-OS-Console/Forest-OS-Console.vbproj
@@ -47,10 +47,14 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\Forest-OS_Logo_NoText.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -111,6 +115,27 @@
       <Project>{0ebab124-be39-4f3d-a306-a7d14d677322}</Project>
       <Name>ForestOSUtilities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Forest-OS_Logo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Forest-OS_Logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Forest-OS_Logo_NoText.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Forest-OS_Logo_NoText.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logout.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Poweroff.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
