Added File Explorer

--- a/src/Forest OS/Forest OS.vbproj
+++ b/src/Forest OS/Forest OS.vbproj
@@ -117,6 +117,12 @@
     <Compile Include="OS\Login\Login.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="OS\Programs\Explorer\Explorer.Designer.vb">
+      <DependentUpon>Explorer.vb</DependentUpon>
+    </Compile>
+    <Compile Include="OS\Programs\Explorer\Explorer.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="OS\Register\CreateAccount.Designer.vb">
       <DependentUpon>CreateAccount.vb</DependentUpon>
     </Compile>
@@ -166,6 +172,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OS\Login\Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OS\Programs\Explorer\Explorer.resx">
+      <DependentUpon>Explorer.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OS\Register\CreateAccount.resx">
       <DependentUpon>CreateAccount.vb</DependentUpon>
@@ -225,7 +234,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="OS\Desktop\" />
-    <Folder Include="OS\Programs\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Logout.png" />
