Changed Login Method

--- a/src/Forest OS/App.config
+++ b/src/Forest OS/App.config
@@ -11,7 +11,13 @@
     <userSettings>
         <Forest_OS.My.MySettings>
             <setting name="FirstTime" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
+            </setting>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Usertype" serializeAs="String">
+                <value />
             </setting>
         </Forest_OS.My.MySettings>
     </userSettings>
