--- a/src/Forest OS/My Project/Settings.settings
+++ b/src/Forest OS/My Project/Settings.settings
@@ -3,7 +3,13 @@
   <Profiles />
   <Settings>
     <Setting Name="FirstTime" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="Username" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Usertype" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
