--- a/src/Forest OS/App.config
+++ b/src/Forest OS/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <Forest_OS.My.MySettings>
             <setting name="FirstTime" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="Username" serializeAs="String">
                 <value />
