--- a/src/Forest-OS-ConsoleUtilities/Forest-OS-ConsoleUtilities.vbproj
+++ b/src/Forest-OS-ConsoleUtilities/Forest-OS-ConsoleUtilities.vbproj
@@ -4,36 +4,31 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B4FBE369-16D4-496F-88FB-E0817E134BC4}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <StartupObject>Forest_OS_Console.Module1</StartupObject>
-    <RootNamespace>Forest_OS_Console</RootNamespace>
-    <AssemblyName>Forest-OS-Console</AssemblyName>
+    <ProjectGuid>{8B7D32AF-F8F1-4665-BFF4-ED83E3A502EC}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>Forest_OS_ConsoleUtilities</RootNamespace>
+    <AssemblyName>Forest-OS-ConsoleUtilities</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MyType>Console</MyType>
+    <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>Forest-OS-Console.xml</DocumentationFile>
+    <DocumentationFile>Forest-OS-ConsoleUtilities.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>Forest-OS-Console.xml</DocumentationFile>
+    <DocumentationFile>Forest-OS-ConsoleUtilities.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -48,23 +43,9 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>Resources\Forest-OS_Logo_NoText.ico</ApplicationIcon>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoUpdater.NET, Version=1.6.0.0, Culture=neutral, PublicKeyToken=501435c91b35f4bc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autoupdater.NET.Official.1.6.0\lib\net40\AutoUpdater.NET.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -83,12 +64,11 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Module1.vb" />
+    <Compile Include="ConsoleUtil.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -119,35 +99,8 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="Resources\Forest-OS_Logo.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Forest-OS_Logo.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Forest-OS_Logo_NoText.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Forest-OS_Logo_NoText.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Logout.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Menu.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Poweroff.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Forest-OS-ConsoleUtilities\Forest-OS-ConsoleUtilities.vbproj">
-      <Project>{8b7d32af-f8f1-4665-bff4-ed83e3a502ec}</Project>
-      <Name>Forest-OS-ConsoleUtilities</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ForestOSUtilities\ForestOSUtilities.vbproj">
       <Project>{199809dd-80fa-4dff-8c67-c106b06d6ec2}</Project>
       <Name>ForestOSUtilities</Name>
