--- a/src/ForestOSUtilities/ForestOSUtilities.vbproj
+++ b/src/ForestOSUtilities/ForestOSUtilities.vbproj
@@ -90,6 +90,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Security.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
