--- a/src/Forest OS/Forest OS.vbproj
+++ b/src/Forest OS/Forest OS.vbproj
@@ -118,6 +118,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="OS\DeleteAccount\DeleteAccount.Designer.vb">
+      <DependentUpon>DeleteAccount.vb</DependentUpon>
+    </Compile>
+    <Compile Include="OS\DeleteAccount\DeleteAccount.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="OS\Login\First Time Setup\Setup_Page2.Designer.vb">
       <DependentUpon>Setup_Page2.vb</DependentUpon>
     </Compile>
@@ -304,7 +310,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="OS\System\Logout\" />
-    <Folder Include="OS\User\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Logout.png" />
