--- a/src/Forest OS/App.config
+++ b/src/Forest OS/App.config
@@ -14,10 +14,13 @@
                 <value>False</value>
             </setting>
             <setting name="Username" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Usertype" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="Theme" serializeAs="String">
+                <value>Default</value>
             </setting>
         </Forest_OS.My.MySettings>
     </userSettings>
