--- a/src/Forest OS/My Project/Settings.settings
+++ b/src/Forest OS/My Project/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="Usertype" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Theme" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Default</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
