--- a/src/Forest OS/Forest OS.vbproj
+++ b/src/Forest OS/Forest OS.vbproj
@@ -351,7 +351,9 @@
       <Name>ForestOSUtilities</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\Wallpaper.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Logout.png" />
   </ItemGroup>
